feat: Complete booking system with payment flow and webhook integration
 Features:
- Complete booking system UI with step-by-step wizard
- Zone and table selection components
- Payment integration with multiple methods (Credit Card, QR Code, Mobile Banking, Cash)
- QR code display for PromptPay payments
- Booking status management (PENDING -> CONFIRMED via webhook)
- Profile page with user statistics
- Booking history and active bookings pages
- QR check-in functionality

 Backend Improvements:
- Payment service webhook integration with booking service
- Payment event publisher for status updates
- Booking payment confirmation endpoint
- QR token generation for check-in

 UI/UX Enhancements:
- Responsive mobile-first design
- Dark theme with bar aesthetics
- Fixed hydration errors for date formatting
- Improved booking card layout
- Guest count increment/decrement buttons
- Full-width dashboard cards on mobile
- Bottom navigation bar

 Developer Tools:
- Database clearing script (clear-data.bat/sql)
- Updated documentation with setup instructions
- Payment flow documentation

 Bug Fixes:
- Fixed payment webhook URL (port 8081 -> 8083)
- Fixed booking status not updating after payment
- Fixed hydration mismatch errors
- Fixed UI width alignment issues

 Documentation:
- Updated README.md with payment flow details
- Enhanced SETUP.md with troubleshooting guide
- Added database management instructions