@@ -1,5 +1,3 @@
-package com.example.barbooking.gateway.config;
-
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -7,7 +5,6 @@ import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -15,32 +12,11 @@ public class CorsConfig {
     @Bean
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration corsConfig = new CorsConfiguration();
-        
-        // Allow frontend origin
-        corsConfig.setAllowedOrigins(List.of(
-                "http://localhost:3001",  // Next.js dev server (changed from 3000 to avoid conflict with Grafana)
-                "http://localhost:3000"   // Grafana (if needed)
-        ));
-        
-        // Allow all HTTP methods
-        corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        
-        // Allow all headers
-        corsConfig.setAllowedHeaders(List.of("*"));
-        
-        // Allow credentials (cookies, authorization headers)
+        corsConfig.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://localhost:3001"));
+        corsConfig.setMaxAge(8000L);
+        corsConfig.addAllowedMethod("*");
+        corsConfig.addAllowedHeader("*");
         corsConfig.setAllowCredentials(true);
-        
-        // Expose headers to frontend
-        corsConfig.setExposedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "X-User-Id",
-                "X-User-Role"
-        ));
-        
-        // Max age for preflight requests (1 hour)
-        corsConfig.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfig);
@@ -48,4 +24,3 @@ public class CorsConfig {
         return new CorsWebFilter(source);
     }
 }
-
